noinst_LTLIBRARIES = liblua.la

liblua_la_SOURCES = \
	src/print.c \
	src/lmem.c \
	src/lbaselib.c \
	src/lauxlib.c \
	src/ltm.c \
	src/loadlib.c \
	src/lobject.c \
	src/lzio.c \
	src/ldebug.c \
	src/lundump.c \
	src/lcode.c \
	src/liolib.c \
	src/loslib.c \
	src/ldblib.c \
	src/llex.c \
	src/lopcodes.c \
	src/lstate.c \
	src/lstring.c \
	src/ldo.c \
	src/ltable.c \
	src/linit.c \
	src/lapi.c \
	src/ldump.c \
	src/lparser.c \
	src/lstrlib.c \
	src/ltablib.c \
	src/lvm.c \
	src/lmathlib.c \
	src/lgc.c \
	src/lfunc.c \
	src/lua_cmsgpack.c \
	src/lua_bufferlist.cc \
	src/lualib.h \
	src/luaconf.h \
	src/llimits.h \
	src/lua.h \
	src/ltm.h \
	src/lvm.h \
	src/lapi.h \
	src/lauxlib.h \
	src/lparser.h \
	src/lstring.h \
	src/lobject.h \
	src/ldebug.h \
	src/lundump.h \
	src/ltable.h \
	src/lstate.h \
	src/lfunc.h \
	src/lzio.h \
	src/lmem.h \
	src/lgc.h \
	src/lcode.h \
	src/ldo.h \
	src/lopcodes.h \
	src/llex.h \
	lua.hpp
